methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:3: error: not found: value a
  a
  ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if(!estFaceMur()){
  ^