methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  a
  if(!estFaceMur()){
  	var c = getCouleurSol()
    avance()
    c = getCouleurSol()
    if(c == Color.green){
    	recule()
      return true
    }
    else{
    	recule()
    	return false
    }
	}
}